# advent_of_code

./: Advent24.cabal  AdventOfCode.cabal  README.md  run.sh  todo.org
Input23/: test18_2.txt
Input25/: test06_1.txt
app/: Day18.hs  Main.hs  Main15.hs  Main24.hs  MainTemplate.hs  TestCache.hs  TestSearch.hs  TestSolver.hs  TestStateMemo.hs
src/: MyCache.hs  MyGrid.hs  MyParser.hs  MySearch.hs  MySolver.hs  MyUtils.hs  advent15_01.hs  advent15_02.hs  advent15_03.hs  advent15_04.hs  advent15_05.hs  advent20_01.hs  advent20_02.hs  advent20_03.hs  advent20_04.hs  advent20_05.hs  advent20_06.hs  advent20_07.hs  advent20_07smart.hs  advent20_08.hs  advent20_09.hs  advent20_10.hs  advent20_11.hs  advent20_12.hs  advent20_13.hs  advent20_14.hs  advent20_15.hs  advent20_16.hs  advent20_17.hs  advent20_18.hs  advent20_19.hs  advent20_20.hs  advent20_21.hs  advent20_22.hs  advent20_23.hs  advent20_24.hs  advent20_25.hs  advent21_01.hs  advent21_02.hs  advent21_03.hs  (+73 more)
