cabal-version:      3.0
name:               AdventOfCode
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alain Dutech
maintainer:         snowgoon88@gmail.com
-- copyright:
category:           Puzzle
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-properties
    hs-source-dirs:   app, src
    default-language: Haskell2010
    build-depends:    base ,
        MissingH ,
        extra,
        containers ,
        massiv ,
        transformers ,
        time ,
        mtl ,
        linear ,
        megaparsec,
        vector

    other-modules:
        MyCache,
        MyParser,
        MyGrid,
        MyUtils

-- executable AdventOfCode
--     import:           warnings ,
--                       shared-properties

--     main-is:          Main20.hs
    -- other-modules:
    -- other-extensions:
    -- build-depends:    base ^>=4.18.3.0
    -- hs-source-dirs:   app
    -- default-language: Haskell2010

executable Advent24
    import: shared-properties
    main-is:          Main24.hs

executable Advent23
    import: shared-properties
    main-is:          Main.hs

executable Advent21
    import:           warnings ,
                      shared-properties

    main-is:          Main21.hs

executable Advent20
    import:           warnings ,
                      shared-properties

    main-is:          Main20.hs

executable Advent15
    import: shared-properties
    main-is:          Main15.hs
